[gd_scene load_steps=9 format=3 uid="uid://djj1r7rdx5lv"]

[ext_resource type="Script" path="res://scripts/audio.gd" id="1_42wjj"]
[ext_resource type="AudioStream" uid="uid://c4084ejdhh0kr" path="res://sounds/Loops/Polarity_LoopGame.wav" id="2_ksdys"]
[ext_resource type="AudioStream" uid="uid://doavu2dg3yq1c" path="res://sounds/player/Polarity_SD_Death.wav" id="2_onnaj"]
[ext_resource type="AudioStream" uid="uid://6a51nvsnad5o" path="res://sounds/player/Polarity_SD_PickUp.wav" id="3_c6qau"]
[ext_resource type="AudioStream" uid="uid://b8y6fty0stvxt" path="res://sounds/Loops/Polarity_LoopMenu.wav" id="3_nkxbs"]
[ext_resource type="AudioStream" uid="uid://dj1c8pt3wlusl" path="res://sounds/Loops/Polarity_Loop_GameOver.wav" id="4_lnneb"]
[ext_resource type="AudioStream" uid="uid://l1w1lakh8vd2" path="res://sounds/player/Polarity_SD_Boost.wav" id="5_3ocdx"]
[ext_resource type="AudioStream" uid="uid://ccqjwjivo8eyc" path="res://sounds/player/Polarity_SD_Polarità.wav" id="7_ghahb"]

[node name="Audio" type="Node2D"]
script = ExtResource("1_42wjj")

[node name="PolarityLoopGame" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_ksdys")

[node name="PolarityLoopMenu" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_nkxbs")

[node name="PolarityLoopGameOver" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_lnneb")

[node name="PolaritySdDeath" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_onnaj")

[node name="PolaritySdPickUp" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_c6qau")
volume_db = -4.685

[node name="PolaritySdPolarità" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_ghahb")
volume_db = 9.369

[node name="PolaritySdBoost" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_3ocdx")
